--- a/panel/docker-compose.yml
+++ b/panel/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - "/mnt/100g/pterodactyl/database:/var/lib/mysql"
+      - "./database/:/var/lib/mysql"
     environment:
       <<: *db-environment
       MYSQL_DATABASE: "panel"
@@ -46,10 +46,10 @@ services:
       - database
       - cache
     volumes:
-      - "/mnt/100g/pterodactyl/var/:/app/var/"
-      - "/mnt/100g/pterodactyl/nginx/:/etc/nginx/http.d/"
-      - "/mnt/100g/pterodactyl/certs/:/etc/letsencrypt/"
-      - "/mnt/100g/pterodactyl/logs/:/app/storage/logs"
+      - "./var/:/app/var/"
+      - "./nginx/:/etc/nginx/http.d/"
+      - "./certs/:/etc/letsencrypt/"
+      - "./logs/:/app/storage/logs"
     environment:
       <<: [*panel-environment, *mail-environment]
       DB_PASSWORD: *db-password
