--- a/panel/docker-compose.yml
+++ b/panel/docker-compose.yml
@@ -6,7 +6,7 @@ x-common:
     MYSQL_ROOT_PASSWORD: "CHANGE_ME_TOO"
   panel:
     &panel-environment
-    APP_URL: "http://mc.haibersmp.ml:3000"
+    APP_URL: "http://mc.haibersmp.ml"
     APP_TIMEZONE: "UTC"
     APP_SERVICE_AUTHOR: "noreply@example.com"
     TRUSTED_PROXIES: "*"
